# rr_stats

./: README.md  dev-install.sh  pyproject.toml  watch.sh
rr_stats/: figletize.py  graph.py  rr_stats.py  sample.py  stats.py
systemd/: rr_sample.service  rr_sample.timer
