[tool.poetry]
name = "rr_stats"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pytz = "^2021.3"
more-itertools = "^8.11.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rr_sample = 'rr_stats.rr_stats:main'