[tool.poetry]
name = "rr_stats"
version = "0.3.1"
description = ""
authors = ["Vebyast <vebyast@gmail.com>"]
include = ["data/*"]

[tool.poetry.dependencies]
python = "3.8.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pytz = "^2021.3"
more-itertools = "^8.11.0"
xdg = "^5.1.1"
colorama = "^0.4.4"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rr_stats_sample = 'rr_stats.sample:main'
rr_stats_graph = 'rr_stats.graph:main'
rr_stats_watch = 'rr_stats.graph:watch'
